<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegisterActivity"
    tools:showIn="@layout/activity_register">
    <TextView
        android:id="@+id/welcome"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/welcome"
        android:textSize="20dip"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/namelabel" />
                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/age"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/age" />

                <EditText
                    android:id="@+id/editAge"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autoText="true"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/gender"
                    android:layout_gravity="center" />
                <RadioGroup
                    android:id="@+id/Radiosex"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="Female" />
                    </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/height"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/inches" />

                <EditText
                    android:id="@+id/editHeight"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:nestedScrollingEnabled="true"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/weight" />

                <EditText
                    android:id="@+id/editWeight"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/level"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:text="@string/level"
                    android:layout_gravity="center" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dip"
                    android:entries="@array/level_array"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/usernameEdit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/password"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/passwordRegister" />

                <EditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/stepPerMile"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/stepPerMile" />

                <EditText
                    android:id="@+id/stepPerMileEdit"
                    android:hint="@string/hint"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_weight="1"
                    android:text="CANCEL" />

                <Button
                    android:id="@+id/continue_button"
                    android:layout_width="0dip"
                    android:layout_marginRight="5dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="CONTINUE" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
