<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:background="@drawable/background_login_div"
        android:layout_marginTop="50dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginBottom="15dip">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/login_user_input"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:textStyle="bold|italic"
            android:textSize="15dp" />
        <EditText
            android:drawableLeft="@drawable/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_below="@+id/login_user_input"
            android:hint="Please input your username"
            android:singleLine="true"
            android:id="@+id/username"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="3dip"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/login_password_input"
            android:layout_below="@+id/username"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="1dip"
            android:textStyle="bold|italic"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/password"
            android:drawableLeft="@drawable/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:password="true"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginTop="3dip"
            android:layout_marginBottom="5dip"
            android:textStyle="italic" />
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:text="Login"
            android:layout_marginTop="3dip"
            android:layout_marginBottom="5dip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView  android:id="@+id/new_user"
            android:text="@string/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dip"
            android:layout_marginLeft="15dip"
            android:layout_marginTop="1dip" />
        <TextView
            android:id="@+id/register_link"
            android:text="@string/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#888"
            android:textColorLink="#e0c7182e"
            android:textStyle="normal|italic"
            android:textSize="20dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="1dip" />
    </LinearLayout>
</LinearLayout>