<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">
    <TextView
        android:padding="15dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/description"
        android:id="@+id/desc"
        android:textStyle="normal|italic"
        android:textSize="20dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:gravity="fill_horizontal"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dip"
            android:orientation="vertical"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginBottom="15dip">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/namelabel"
                    android:textStyle="bold" />
                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/age"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/age"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editAge"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autoText="true"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/gender"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="Gender"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editgender"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:autoText="true"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/height"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/inches"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editHeight"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:nestedScrollingEnabled="true"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/weight"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editWeight"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/level"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:gravity="right|center_vertical"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:text="@string/level"
                    android:layout_gravity="center"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameActivity"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/stepPerMile"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="@string/stepPerMile"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/stepPerMileEdit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/password"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical"
                    android:text="Password"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwordEdit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modify"
            android:id="@+id/Modify" />
        <Button
            android:layout_marginLeft="50dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/Submit" />
    </LinearLayout>
</LinearLayout>